--- a/views/java.ejs
+++ b/views/java.ejs
@@ -29,6 +29,8 @@
                 
                 <ul>
                     
+                <li>The person who created Java is <%=fakeUser.name%> and he is offering to help students with their Java homework. The email is <%=fakeUser.email%>.</li>
+                    
                 <li>Java code compiles through both a compiler and virtual machine 
                 and contains a lot of the same syntax that is in C++.
                 </li>
