--- a/views/c-plus.ejs
+++ b/views/c-plus.ejs
@@ -30,7 +30,7 @@
             <div id="languageDescription">
                 
                 <ul>
-                    
+                <li>C++ was invented by <%=fakeUser.name%> in 1972</li>
                 <li>C++ compiles directly to a machine's native code, 
                 allowing it to be one of the fastest languages 
                 in the world, if optimized.</li>
